# xenomorph

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
xenohooks/: router.py
xenohooks/builtin/: __init__.py
xenohooks/builtin/packs/: __init__.py
xenohooks/builtin/packs/bash/: __init__.py  check_bash_tools.py  enforce_uv.py
xenohooks/builtin/packs/docker/: check_dockerfile.py
xenohooks/builtin/packs/frontend/: __init__.py  check_biome.py  check_design_tokens.py  check_stylelint.py  test_vitest.py
xenohooks/builtin/packs/notify/: play_sound.py
xenohooks/builtin/packs/python/: __init__.py  check_bandit.py  check_config_syntax.py  check_mypy.py  check_pip_audit.py  check_pydocstyle.py  check_ruff.py  check_secrets.py
xenohooks/builtin/packs/quality/: __init__.py  check_debug_statements.py
xenohooks/builtin/packs/rescript/: autofix_rescript.py  check_rescript_antipatterns.py  check_rescript_compile.py
xenohooks/builtin/packs/vcs/: check_merge_conflicts.py  protect_branch.py
xenohooks/common/: config.py  exec.py  feedback.py  filematch.py  log.py  runner.py  selectors.py  task_queue.py  task_runner.py  types.py  utils.py
xenohooks/config/: __init__.py
xenohooks/examples/: __init__.py  all-packs.yml  compose.yml  docker.yml  frontend.yml  minimal.yml  python.yml  rescript.yml  security.yml  stylelint.config.js
xenomcps/: __init__.py  server.py
